--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,8 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_HOST=
 POSTGRES_PORT=
+
+ACCESS_TOKEN_LIFETIME=
+REFRESH_TOKEN_LIFETIME=
+
+REDIS_URL=
