--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     command: >
           sh -c "python manage.py collectstatic --noinput &&
                  python manage.py migrate &&
-                 gunicorn --bind 0.0.0.0:8000 config.wsgi:application"
+                 python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     expose:
